# aslbench

./: .gitignore  BRIEF.md  PLAN.md  README.md  environment.yml  final-report.qmd  providers.yaml  pyproject.toml
data/processed/: subset_info.json
report/: report.qmd
runs/: ACTIVE
runs/aslbench-20260711-193806/: config.json  state.json
runs/aslbench-20260711-193806/models/copilot-claude-opus-4-8/: items.jsonl  items.parquet  state.json  summary.json
runs/aslbench-20260711-193806/models/copilot-claude-sonnet-4-6/: items.jsonl  items.parquet  state.json  summary.json
runs/aslbench-20260711-213804/: config.json  state.json
runs/aslbench-20260711-213804/models/omlx-qwen3-6-27b-ud-mlx-4bit/: items.jsonl  items.parquet  state.json  summary.json
runs/aslbench-20260711-221137/: config.json  state.json
runs/aslbench-20260711-234847/: config.json  state.json
runs/aslbench-20260711-235658/: config.json  state.json
runs/aslbench-20260712-012227/: config.json  state.json
runs/aslbench-20260713-203909/: config.json  state.json
scripts/: subset_dataset.py
src/aslbench/: config.py  content.py  dataset.py  export.py  figures.py  runner.py  scoring.py
src/aslbench/app/: __main__.py  app.py  callbacks.py  layout.py
src/aslbench/app/assets/: custom.css
src/aslbench/prompts/: __init__.py  v1_zeroshot.md  v2_class_list.md  v3_reasoning.md
src/aslbench/providers/: __init__.py  anthropic_provider.py  copilot_provider.py  openai_compat.py
tests/: test_comparison.py  test_dataset.py  test_parsing.py  test_prompts.py  test_runner.py  test_scoring.py
(+26 files in other folders)
